tests/algorithms/x/C/data_structures/suffix_tree/suffix_tree_node.c
// Generated by Mochi 0.10.32 on 2025-08-08 09:18 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>


static char* str_int(long long v) {
    char buf[32];
    snprintf(buf, sizeof(buf), "%lld", v);
    return strdup(buf);
}

typedef struct { const char **keys; int *vals; size_t len; size_t cap; } MapSI;

static int map_get_si(const char *keys[], const int vals[], size_t len, const char *key) {
    for (size_t i = 0; i < len; i++) {
        if (strcmp(keys[i], key) == 0) return vals[i];
    }
    return 0;
}

#include <time.h>
#include <stdlib.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

typedef struct Anon1 Anon1;
typedef struct Anon2 Anon2;
typedef struct SuffixTreeNode SuffixTreeNode;

struct Anon1 {
    const char* a;
};

struct Anon2 {
};

struct SuffixTreeNode {
    MapSI children;
    long long is_end_of_string;
    long long start;
    long long end;
    long long suffix_link;
};

SuffixTreeNode root;
SuffixTreeNode leaf;
SuffixTreeNode *nodes = NULL;
size_t nodes_len = 0;
SuffixTreeNode root_check;
SuffixTreeNode leaf_check;

SuffixTreeNode new_suffix_tree_node(MapSI children, long long is_end_of_string, long long start, long long end, long long suffix_link);
SuffixTreeNode empty_suffix_tree_node();
long long has_key(MapSI m, const char* k);
int main(void);

SuffixTreeNode new_suffix_tree_node(MapSI children, long long is_end_of_string, long long start, long long end, long long suffix_link) {
    return (SuffixTreeNode){.children = children, .is_end_of_string = is_end_of_string, .start = start, .end = end, .suffix_link = suffix_link};
}

SuffixTreeNode empty_suffix_tree_node() {
    return new_suffix_tree_node({  }, 0LL, -1LL, -1LL, -1LL);
}

long long has_key(MapSI m, const char* k) {
    for (size_t __i = 0; __i < m.len; __i++) {
        const char* key = m.keys[__i];
        if (strcmp(key, k) == 0) {
            return 1LL;
        }
    }
    return 0LL;
}

int main(void) {
    {
        long long __start = _now();
        root = new_suffix_tree_node((Anon1){.a = 1LL}, 0LL, -1LL, -1LL, -1LL);
        leaf = new_suffix_tree_node((Anon2){}, 1LL, 0LL, 2LL, 0LL);
        nodes = (SuffixTreeNode[]){ root, leaf };
        nodes_len = 2;
        root_check = nodes[(int)(0LL)];
        leaf_check = nodes[(int)(1LL)];
        puts(str_int(has_key(root_check.children, "a")));
        puts(str_int(leaf_check.is_end_of_string));
        puts(str_int(leaf_check.start));
        puts(str_int(leaf_check.end));
        puts(str_int(leaf_check.suffix_link));
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
